# $Id$
##
## This file is part of pyformex 0.1.2 Release Fri Jul  9 14:48:57 2004
## pyformex is a python implementation of Formex algebra
## (c) 2004 Benedict Verhegghe (email: benedict.verhegghe@ugent.be)
## Releases can be found at ftp://mecatrix.ugent.be/pub/pyformex/
## Distributed under the General Public License, see file COPYING for details
##
#

2004-06-29 BV :	Quickly hacked together the Formex functionality
2004-06-30 BV : Added Canvas and simple Menu (stripped from other project)
2004-07-02 BV : Created a Subversion repository
2004-07-06 BV : Created separate Camera class, needed for other project(s) too
2004-07-07 BV : Added README, History, COPYING, Makefile, Stamp
2004-07-07 BV : Added dynamic zoom/pan/rotate
2004-07-08 BV : Created a first release (0.1.1)
2004-07-09 BV : Added file replay, moved examples to separate files, 
		autoload example menu, added saving of images
2004-07-14 BV : Made the cylindrical and spherical transforms more general,
		Reorganized the subversion repository